Add a list of target faustnumbers to tasks
since the data produced by some tasks only related to some of the faustnumbers
on the case (collected reviews etc.)

Auditors: jbn, atm, jbr
